--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+.next
 /.pnp
 .pnp.*
 .yarn/*
@@ -42,3 +43,4 @@ next-env.d.ts
 # python
 venv/
 .env
+__pycache__
